--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Marcos Lopes",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
