--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.7",
